<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.speedy.pucitdossier.LoginActivity"
    android:paddingTop="@dimen/login_verticle_margin_small">
    <RelativeLayout android:id="@+id/rl_logo_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/logo"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

    </RelativeLayout>
    <RelativeLayout android:id="@+id/rl_pucit_dossier_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rl_logo_login">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/pucit_dossier"
            android:layout_centerHorizontal="true" />

    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/rl_pucit_dossier_login">
        <EditText android:id="@+id/et_email_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Email"
            android:drawableLeft="@drawable/ic_email_black_24dp"
            android:layout_marginLeft="@dimen/left_right_margin"
            android:layout_marginRight="@dimen/left_right_margin">

        </EditText>
        <EditText android:id="@+id/et_password_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Password"
            android:drawableLeft="@drawable/ic_lock_black_24dp"
            android:layout_marginLeft="@dimen/left_right_margin"
            android:layout_marginRight="@dimen/left_right_margin"
            android:inputType="textPassword">

        </EditText>

        <Button android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_login"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:background="@color/colorSkyBlue"
            android:layout_marginLeft="@dimen/left_right_margin"
            android:layout_marginRight="@dimen/left_right_margin"
            />
        <TextView android:id="@+id/tv_signup_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/login_verticle_margin_large"
            android:layout_marginLeft="@dimen/left_right_margin"
            android:layout_marginRight="@dimen/left_right_margin"
            android:autoLink="email"
            android:gravity="center"
            android:text="@string/tv_signup_login">
        </TextView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/login_verticle_margin_small"
            android:layout_marginLeft="@dimen/left_right_margin"
            android:layout_marginRight="@dimen/left_right_margin"
            android:autoLink="web"
            android:gravity="center"
            android:text="@string/tv_forget_password_login">
        </TextView>



    </LinearLayout>

</RelativeLayout>
